bk_ida/gccida/c3/ereal_from_int
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/ereal_from_int/src/real.c:1321:63: error: must use 'enum' tag to refer to type 'machine_mode'
void  ereal_from_int( realvaluetype *d, __int64 i, __int64 j, machine_mode mode) 
                                                              ^
                                                              enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/ereal_from_int/src/real.c:1345:6: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
if ( mode_class_0[mode] != MODE_FLOAT ) 
     ^~~~~~~~~~~~
     mode_class
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/ereal_from_int/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/ereal_from_int/src/real.c:1365:12: error: expected expression
*( _OWORD *)x = 0LL; 
           ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/ereal_from_int/src/real.c:1365:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)x = 0LL; 
   ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/ereal_from_int/src/real.c:1375:12: error: expected expression
*( _OWORD *)x = 0LL; 
           ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/ereal_from_int/src/real.c:1375:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)x = 0LL; 
   ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/ereal_from_int/src/real.c:1415:12: error: expected expression
*( _OWORD *)x = 0LL; 
           ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/ereal_from_int/src/real.c:1415:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)x = 0LL; 
   ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/ereal_from_int/src/real.c:1425:12: error: expected expression
*( _OWORD *)x = 0LL; 
           ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/ereal_from_int/src/real.c:1425:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)x = 0LL; 
   ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/ereal_from_int/src/real.c:1472:84: error: too many arguments to function call, expected 2, have 3
e24toe( ( const unsigned __int16 *)*( unsigned int *)y, ( unsigned __int16 *)y[1], ( __int64)&v17); 
~~~~~~                                                                             ^~~~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/ereal_from_int/src/real.c:427:1: note: 'e24toe' declared here
static void e24toe      PARAMS ((const UEMUSHORT *, UEMUSHORT *));
^
11 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/ereal_from_int/src/obj/real.o] Error 1
